[gd_scene load_steps=7 format=2]

[ext_resource path="res://ExampleLobby/ExampleLobby.gd" type="Script" id=1]
[ext_resource path="res://ExampleLobby/SSMM_Lobby.png" type="Texture" id=2]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.8, 0.8, 0.8, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_blend = true
corner_radius_top_left = 1
corner_radius_top_right = 1
corner_radius_bottom_right = 1
corner_radius_bottom_left = 1
expand_margin_left = 3.0
expand_margin_right = 3.0
expand_margin_top = 3.0
expand_margin_bottom = 3.0
shadow_color = Color( 0, 0, 0, 0.3 )
shadow_size = 5

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.14902, 0.14902, 0.14902, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_blend = true
corner_radius_top_left = 1
corner_radius_top_right = 1
corner_radius_bottom_right = 1
corner_radius_bottom_left = 1
expand_margin_left = 3.0
expand_margin_right = 3.0
expand_margin_top = 3.0
expand_margin_bottom = 3.0
shadow_color = Color( 0, 0, 0, 0.3 )
shadow_size = 5

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.8, 0.8, 0.8, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_blend = true
corner_radius_top_left = 1
corner_radius_top_right = 1
corner_radius_bottom_right = 1
corner_radius_bottom_left = 1
expand_margin_left = 3.0
expand_margin_right = 3.0
expand_margin_top = 3.0
expand_margin_bottom = 3.0
shadow_color = Color( 0, 0, 0, 0.3 )
shadow_size = 5

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.14902, 0.14902, 0.14902, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_blend = true
corner_radius_top_left = 1
corner_radius_top_right = 1
corner_radius_bottom_right = 1
corner_radius_bottom_left = 1
expand_margin_left = 3.0
expand_margin_right = 3.0
expand_margin_top = 3.0
expand_margin_bottom = 3.0
shadow_color = Color( 0, 0, 0, 0.3 )
shadow_size = 5

[node name="ExampleLobby" type="TextureRect"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
expand = true
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SearchControllersButton" type="Button" parent="."]
margin_left = 16.0
margin_top = 16.0
margin_right = 216.0
margin_bottom = 66.0
custom_styles/hover = SubResource( 1 )
custom_styles/normal = SubResource( 2 )
text = "Search For Controllers"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartGameButton" type="Button" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -216.0
margin_top = 16.0
margin_right = -16.0
margin_bottom = 66.0
custom_styles/hover = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
text = "Start Game!"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="SearchControllersButton" to="." method="_on_SearchControllersButton_pressed"]
[connection signal="pressed" from="StartGameButton" to="." method="_on_StartGameButton_pressed"]
